--- a/artnav/gallery/templates/gallery/artmap.html
+++ b/artnav/gallery/templates/gallery/artmap.html
@@ -3,10 +3,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="robots" content="noindex">
   <title>Terra Foundation Presents: {{artwork.artwork_title}}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-T43J553');</script>
+  <!-- End Google Tag Manager -->
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:url" content="https://www.terraamericanart.org/"/>
@@ -52,6 +59,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T43J553"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   {% comment %}
   <nav class="artmapper-global-navigation {% block artwork_class %}{% endblock %}">
