--- a/artnav/gallery/templates/gallery/artmap.html
+++ b/artnav/gallery/templates/gallery/artmap.html
@@ -35,7 +35,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'icons/apple-touch-icon.png' %}">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'icons/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'icons/favicon-16x16.png' %}">
-  <!-- <link rel="manifest" href="{% static 'icons/site.webmanifest' %}"> -->
+  <link rel="manifest" href="{% static 'icons/site.webmanifest' %}">
   <link rel="mask-icon" href="{% static 'icons/safari-pinned-tab.svg' %}" color="#3b84c7">
   <meta name="msapplication-TileColor" content="#3b84c7">
   <meta name="theme-color" content="#ffffff">
